tests/sksl/errors/golden/ReturnDifferentType.glsl
### Compilation failed:

error: 2: functions 'void main()' and 'int main()' differ only in return type
1 error
